tests/typing/bad/testfile-arrow-4.c

struct S { int a; };
int foo() {}
int main() { (foo())->a; }

